# selfhydro

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci-cd.yml
api_service/: DEPLOYMENT.md  Dockerfile  README.md  cloudbuild.yaml  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt
api_service/tests/: conftest.py  test_image_endpoints.py  test_sensor_endpoints.py
crates/camera/: Cargo.toml
crates/camera/src/: lib.rs  main.rs
crates/camera/tests/: integration_test.rs
crates/monitor/: Cargo.toml
crates/monitor/src/: main.rs
crates/sensors/: Cargo.toml  README.md
crates/sensors/examples/: read_bme280.rs
crates/sensors/src/: lib.rs
crates/sensors/tests/: bme280_integration.rs
deploy/: selfhydro.service
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/images/: page.tsx
frontend/src/app/sensors/: page.tsx
frontend/src/components/: Navigation.tsx  SensorDisplay.tsx  TimeLapse.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
scripts/: build-and-deploy.sh  monitor_logs.sh
