[workspace]
resolver = "2"
members = [
    "crates/camera",
    "crates/sensors",
    "crates/monitor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
repository = "https://github.com/bchalk101/selfhydro"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
google-cloud-storage = "0.24"
google-cloud-default = "0.4"
tempfile = "3.8"
mockall = "0.11"
tokio-test = "0.4"
