[project]
name = "api-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn==0.24.0",
    "python-dotenv==1.0.0",
    "google-cloud-storage==2.13.0",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "python-multipart==0.0.6",
    "aiohttp==3.9.1",
    "python-dateutil==2.8.2",
    "gunicorn==21.2.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
    "httpx>=0.28.1",
]
