[package]
name = "selfhydro-monitor"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
selfhydro-camera = { path = "../camera" }
sensors = { path = "../sensors" }
tokio = { version = "1.0", features = ["full"] }
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
google-cloud-storage = "0.15"
google-cloud-default = "0.3"
influxdb = { version = "0.7.2", features = ["derive"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4" 